; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/tablet/extr_hanwang.c_hanwang_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/tablet/extr_hanwang.c_hanwang_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.hanwang = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_dev*)* @hanwang_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hanwang_open(%struct.input_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.input_dev*, align 8
  %4 = alloca %struct.hanwang*, align 8
  store %struct.input_dev* %0, %struct.input_dev** %3, align 8
  %5 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %6 = call %struct.hanwang* @input_get_drvdata(%struct.input_dev* %5)
  store %struct.hanwang* %6, %struct.hanwang** %4, align 8
  %7 = load %struct.hanwang*, %struct.hanwang** %4, align 8
  %8 = getelementptr inbounds %struct.hanwang, %struct.hanwang* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.hanwang*, %struct.hanwang** %4, align 8
  %11 = getelementptr inbounds %struct.hanwang, %struct.hanwang* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %9, i32* %13, align 4
  %14 = load %struct.hanwang*, %struct.hanwang** %4, align 8
  %15 = getelementptr inbounds %struct.hanwang, %struct.hanwang* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = load i32, i32* @GFP_KERNEL, align 4
  %18 = call i64 @usb_submit_urb(%struct.TYPE_2__* %16, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %1
  %21 = load i32, i32* @EIO, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %2, align 4
  br label %24

23:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %23, %20
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.hanwang* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i64 @usb_submit_urb(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
